@@ -1,5 +1,7 @@
 Changelog for mk-query-advisor:
 
+   * Added rule CLA.006 to detect mixed table GROUP/ORDER BY (issue 1137).
+
 2010-09-11: version 1.0.1
 
    * Add rules JOI.003 and JOI.004 (issue 950).
